# swagger.yaml
@@ -2310,6 +2310,12 @@ paths:
           type: string
           format: uuid
           required: false
+        - in: query
+          name: logs_state
+          description: The state of collecting logs.
+          type: string
+          enum: ['requested', 'collecting', 'completed']
+          required: false
       responses:
         "204":
           description: Success.
@@ -3055,6 +3061,10 @@ definitions:
         type: string
         description: JSON-formatted string containing the validation results for each validation id grouped by category (network, hardware, etc.)
         x-go-custom-tag: gorm:"type:varchar(2048)"
+      logs_info:
+        type: string
+        description: The progress of log collection or empty if logs are not applicable
+        x-go-custom-tag: gorm:"type:varchar(2048)"
       status_updated_at:
         type: string
         format: date-time
@@ -3099,6 +3109,10 @@ definitions:
       bootstrap:
         type: boolean
       logs_collected_at:
+        type: string
+        format: datetime
+        x-go-custom-tag: gorm:"type:timestamp with time zone"
+      logs_started_at:
         type: string
         format: datetime
         x-go-custom-tag: gorm:"type:timestamp with time zone"
@@ -3669,6 +3683,10 @@ definitions:
         type: string
         description: JSON-formatted string containing the validation results for each validation id grouped by category (network, hosts-data, etc.)
         x-go-custom-tag: gorm:"type:varchar(2048)"
+      logs_info:
+        type: string
+        description: The progress of log collection or empty if logs are not applicable
+        x-go-custom-tag: gorm:"type:varchar(2048)"
       install_config_overrides:
         x-go-custom-tag: gorm:"type:text"
         type: string
@@ -3680,6 +3698,10 @@ definitions:
         description: Json formatted string containing the user overrides for the initial ignition config
         example: '{"ignition": {"version": "3.1.0"}, "storage": {"files": [{"path": "/tmp/example", "contents": {"source": "data:text/plain;base64,aGVscGltdHJhcHBlZGluYXN3YWdnZXJzcGVj"}}]}}'
       controller_logs_collected_at:
+        type: string
+        format: date-time
+        x-go-custom-tag: gorm:"type:timestamp with time zone"
+      controller_logs_started_at:
         type: string
         format: date-time
         x-go-custom-tag: gorm:"type:timestamp with time zone"
@@ -4455,6 +4477,15 @@ definitions:
       - 'host'
       - 'controller'
       - 'all'
+      - ''
+
+  logs_state:
+    type: string
+    enum:
+      - 'requested'
+      - 'collecting'
+      - 'completed'
+      - 'timeout'
       - ''
 
   operators:
